Revert "Update landing.yml"
This reverts commit b8699b2c6f607283696a86c3c6cef5ae2dd08060.

--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -46,14 +46,14 @@
 
 - id: Presentations
   i18n: nav.blog
-  name: Presentations
+  name: presentations
   tpl: presentations.html
   page: presentations/
   css: #testimonials
 
 - id: Teaching
   i18n: nav.blog
-  name: Teaching
+  name: teaching
   tpl: teaching.html
   page: teaching/
   css: #testimonials
