--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -30,32 +30,18 @@
 #   tpl: projects.html
 #   css: project
   
-#- id: Academic Record
-#  i18n: nav.blog
-#  name: Academic Record
-#  tpl: record.html
-#  page: record/
-#  css: #testimonials
+- id: Academic Record
+  i18n: nav.blog
+  name: Academic Record
+  tpl: record.html
+  page: record/
+  css: #testimonials
 
 - id: Publications
   i18n: nav.blog
   name: Publications
   tpl: publications.html
   page: publications/
-  css: #testimonials
-
-- id: Presentations
-  i18n: nav.blog
-  name: presentations
-  tpl: presentations.html
-  page: presentations/
-  css: #testimonials
-
-- id: Teaching
-  i18n: nav.blog
-  name: teaching
-  tpl: teaching.html
-  page: teaching/
   css: #testimonials
 
 - id: Links
