--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -2,7 +2,7 @@
 
 - last_name: Motor Neuroscience Lab
   desc: Motor Neuroscience Lab
-  website: https://ostrylab.org
+  website: https://www.psych.mcgill.ca/labs/mcl/Lab-Home.htm
   icon: fa-university
 
 - last_name: UGent
